feat: allow non-ASCII literals in code
- Update Cargo.toml to allow the `non_ascii_literal` lint.
- Fixes Clippy errors caused by non-ASCII characters (such as emoji) in string literals, e.g., 📋, ⚠️, 🔑, ℹ️.
- This change is needed to support user-facing messages with emoji and other non-ASCII symbols.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ zcash-notes-proof = { path = "crates/zcash-notes-proof" }
 absolute_paths = "allow"
 allow_attributes = "allow"
 arbitrary_source_item_ordering.level = "allow"
+non_ascii_literal = "allow"
 blanket_clippy_restriction_lints = "allow"
 cargo = { priority = -1, level = "deny" }
 cargo_common_metadata = "allow"
