--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ rustls = "0.23.35"
 sapling = { package = "sapling-crypto", version = "0.5" }
 serde = "1"
 serde_json = "1"
+serde_with = "3.16.1"
 sha2 = "0.10"
 sled = "0.34.7"
 thiserror = "2.0.17"
