--- a/crates/airdrop/Cargo.toml
+++ b/crates/airdrop/Cargo.toml
@@ -16,6 +16,7 @@ rustls = { workspace = true, features = ["ring"] }
 sapling = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
+serde_with = { workspace = true, features = ["hex"] }
 tokio = { workspace = true, features = [
   "rt-multi-thread",
   "macros",
