--- a/crates/airdrop/Cargo.toml
+++ b/crates/airdrop/Cargo.toml
@@ -30,7 +30,7 @@ tokio = { workspace = true, features = [
 ] }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
-zcash_primitives = { workspace = true }
+zcash_protocol = { workspace = true }
 
 [lints]
 workspace = true
