refactor(mnemonic-to-fvks): use secrecy for mnemonic/passphrase, update key derivation
- Switch to `secrecy` crate for secure handling of mnemonics and passphrases
- Update key derivation to accept account index and passphrase as input
- Remove direct exposure of spending keys from CLI output
- Change default network to mainnet in CLI
- Update dependencies: add `secrecy`, remove unused `zeroize`
- Refactor code for improved security and clarity

--- a/crates/mnemonic-to-fvks/Cargo.toml
+++ b/crates/mnemonic-to-fvks/Cargo.toml
@@ -10,10 +10,10 @@ dotenvy = { workspace = true }
 eyre = { workspace = true }
 hex = { workspace = true }
 rpassword = { workspace = true }
+secrecy = { workspace = true }
 zcash_keys = { workspace = true, features = ["orchard", "sapling"] }
-zcash_primitives = { workspace = true }
 zcash_protocol = { workspace = true }
-zeroize = { workspace = true }
+zip32 = { workspace = true }
 
 [lints]
 workspace = true
