--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ bytemuck = "1.24.0"
 clap = "4.5.51"
 clap_derive = "4.5.49"
 config = { version = "0.15.19", default-features = false }
+console-subscriber = "0.5.0"
 dotenvy = "0.15.7"
 eyre = "0.6.12"
 futures = "0.3.31"
@@ -27,6 +28,7 @@ rpassword = "7.4.0"
 rs_merkle = "1.5.0"
 rustls = "0.23.35"
 sapling = { package = "sapling-crypto", version = "0.5" }
+secrecy = "0.10.3"
 serde = "1"
 serde_json = "1"
 serde_with = "3.16.1"
@@ -35,17 +37,15 @@ sled = "0.34.7"
 thiserror = "2.0.17"
 tokio = "1.48.0"
 tonic = "0.14.2"
-console-subscriber = "0.5.0"
 tonic-prost = "0.14.2"
 tonic-prost-build = "0.14.2"
 tracing = "0.1.41"
 tracing-subscriber = "0.3.20"
+zcash_keys = "0.12.0"
 zcash_note_encryption = "0.4"
 zcash_primitives = "0.26.1"
 zcash_protocol = "0.7.1"
-zeroize = "1.8.2"
 zip32 = "0.2.1"
-zcash_keys = "0.12.0"
 
 [workspace.lints.clippy]
 absolute_paths = "allow"
