feat: update dependencies and refactor consensus imports
- Bump various dependencies (bip39, clap, tracing, zcash_primitives, zcash_protocol, etc.) to latest patch versions in Cargo.toml and Cargo.lock
- Refactor imports to use zcash_protocol::consensus::Parameters instead of zcash_primitives::consensus::Parameters in non-membership-proofs crate
- Minor code cleanups (e.g., use to_owned() instead of to_string())

--- a/crates/non-membership-proofs/Cargo.toml
+++ b/crates/non-membership-proofs/Cargo.toml
@@ -26,6 +26,7 @@ tokio = { workspace = true, features = [
 tonic = { workspace = true, features = ["tls-webpki-roots"] }
 zcash_note_encryption = { workspace = true }
 zcash_primitives = { workspace = true }
+zcash_protocol = { workspace = true }
 zip32 = "0.2"
 
 [lints]
