refactor: make nullifier file sources optional and parallelize Merkle tree construction
- Refactor CLI and file source logic to allow optional sapling/orchard nullifier files
- Update FileSource and Source types to use Option for file paths
- Parallelize Merkle tree leaf hashing using rayon for improved performance
- Move Merkle tree construction and nullifier file writing to async tasks for concurrency
- Improve error handling and logging in lightwalletd and file sources
- Update nullifier metadata to use TxId type instead of Vec<u8>

--- a/crates/non-membership-proofs/Cargo.toml
+++ b/crates/non-membership-proofs/Cargo.toml
@@ -14,6 +14,7 @@ futures-core = { workspace = true }
 hex = { workspace = true }
 light-wallet-api = { workspace = true }
 orchard = { workspace = true }
+rayon = "1"
 rs_merkle = { workspace = true }
 sapling = { workspace = true }
 thiserror = { workspace = true }
