feat(non-membership-proofs): enable TLS for HTTPS endpoints in lightwalletd client
- Updated `LightWalletd::connect` to accept a `Uri` and enable TLS when connecting to HTTPS endpoints using native system roots.
- Added warning when connecting without TLS.
- Improves security for production deployments.

--- a/crates/airdrop/Cargo.toml
+++ b/crates/airdrop/Cargo.toml
@@ -15,6 +15,7 @@ dotenvy = { workspace = true }
 eyre = { workspace = true }
 futures = { workspace = true }
 hex = { workspace = true }
+http = { workspace = true }
 non-membership-proofs = { workspace = true }
 orchard = { workspace = true }
 rs_merkle = { workspace = true }
