--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ eyre = "0.6.12"
 futures = "0.3.31"
 futures-core = "0.3.31"
 hex = "0.4"
+http = "1.4.0"
+itertools = "0.14.0"
 orchard = "0.11.0"
 prost = "0.14.1"
 rpassword = "7.4.0"
