--- a/crates/non-membership-proofs/Cargo.toml
+++ b/crates/non-membership-proofs/Cargo.toml
@@ -13,6 +13,7 @@ bytemuck = { workspace = true }
 futures = { workspace = true }
 futures-core = { workspace = true }
 hex = { workspace = true }
+http = { workspace = true }
 light-wallet-api = { workspace = true }
 orchard = { workspace = true }
 rayon = "1"
@@ -25,7 +26,7 @@ tokio = { workspace = true, features = [
   "fs",
   "io-util",
 ] }
-tonic = { workspace = true, features = ["tls-webpki-roots"] }
+tonic = { workspace = true, features = ["tls-native-roots"] }
 tracing = { workspace = true }
 zcash_note_encryption = { workspace = true }
 zcash_primitives = { workspace = true }
