--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ rpassword = "7.4.0"
 rs_merkle = "1.5.0"
 rustls = "0.23.35"
 sapling = { package = "sapling-crypto", version = "0.5" }
+schemars = "1.1.0"
 secrecy = "0.10.3"
 serde = "1"
 serde_json = "1"
