--- a/crates/airdrop/Cargo.toml
+++ b/crates/airdrop/Cargo.toml
@@ -21,6 +21,7 @@ orchard = { workspace = true }
 rs_merkle = { workspace = true }
 rustls = { workspace = true, features = ["ring"] }
 sapling = { workspace = true }
+schemars = { workspace = true, features = ["derive"] }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 serde_with = { workspace = true, features = ["hex"] }
