chore: add contributing guidelines and changelogs, update workspace config
- Add CONTRIBUTING.md with detailed contribution and workflow guidelines
- Add initial CHANGELOG.md files for airdrop, light-wallet-api, mnemonic-to-fvks, and non-membership-proofs crates
- Update Cargo.toml workspace members and metadata (repository, license, rust-version)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,17 @@
 [workspace]
 resolver = "2"
-members = ["crates/*"]
+members = [
+  "crates/light-wallet-api",
+  "crates/mnemonic-to-fvks",
+  "crates/non-membership-proofs",
+  "crates/airdrop",
+]
 
 [workspace.package]
 edition = "2024"
+rust-version = "1.91.1"
+repository = "https://github.com/eigerco/zcash-namada-airdrop"
+license = "MIT"
 
 [workspace.dependencies]
 light-wallet-api = { path = "crates/light-wallet-api" }
