feat(circuit): implement orchard airdrop ZK circuit with Poseidon Merkle verification
Add complete ZK circuit for proving Zcash note ownership and unspentness
for the Namada airdrop. The circuit enforces:

- Range check: left_nf < hiding_nf < right_nf (proves note unspent)
- Merkle path verification using Poseidon hash (proves inclusion in snapshot)
- Beneficiary commitment binding (proves claim is for specific Namada address)
- Note value as public input (determines airdrop amount)

Key components:
- AirdropCircuit with Halo2 Pow5Chip for Poseidon hashing
- AirdropWitness with optional Poseidon Merkle path data
- PublicInputs: note_value, snapshot_root, beneficiary_commitment
- Proof generation and verification API

All 38 tests passing with full constraint verification.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
   "crates/mnemonic-to-fvks",
   "crates/non-membership-proofs",
   "crates/airdrop",
+  "crates/orchard-airdrop-circuit",
 ]
 
 [workspace.package]
