feat: improve error handling and update dev tooling
- Enhance error reporting for nullifier file reading and index errors in non-membership-proofs crate
- Update flake.lock and devshell.nix for newer dependencies and add cargo-llvm-cov

--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,7 +1,7 @@
 [toolchain]
 channel = "stable"
-targets = ["wasm32-unknown-unknown"]
-components = ["rust-src"]
+targets = []
+components = ["rust-src", "llvm-tools-preview"]
 
 # Check profiles for more information:
 # https://rust-lang.github.io/rustup/concepts/profiles.html
