ci: add GitHub Actions workflows configs
- Add CI workflow for linting, formatting, testing, and building
- Add custom actions for patched dependencies and protoc setup
- Add markdownlint, yamllint, and typos configuration files
- Update workspace Rust MSRV to 1.88.0 in Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ members = [
 
 [workspace.package]
 edition = "2024"
-rust-version = "1.91.1"
+rust-version = "1.88.0"
 repository = "https://github.com/eigerco/zcash-namada-airdrop"
 license = "MIT"
 
@@ -73,3 +73,6 @@ unused_qualifications = "warn"
 arithmetic_side_effects = "deny"
 indexing_slicing = "deny"
 unwrap_used = "deny"
+
+[workspace.lints.rustdoc]
+broken_intra_doc_links = "deny"
