--- a/crates/airdrop/Cargo.toml
+++ b/crates/airdrop/Cargo.toml
@@ -3,6 +3,7 @@ name = "airdrop"
 version = "0.1.0"
 edition.workspace = true
 license = "MIT"
+rust-version.workspace = true
 
 [features]
 default = []
