--- a/crates/light-wallet-api/Cargo.toml
+++ b/crates/light-wallet-api/Cargo.toml
@@ -3,6 +3,7 @@ name = "light-wallet-api"
 version = "0.1.0"
 edition.workspace = true
 license = "MIT"
+rust-version.workspace = true
 
 [dependencies]
 prost = { workspace = true }
