--- a/crates/mnemonic-to-fvks/Cargo.toml
+++ b/crates/mnemonic-to-fvks/Cargo.toml
@@ -3,6 +3,7 @@ name = "mnemonic-to-fvks"
 version = "0.1.0"
 edition.workspace = true
 license = "MIT"
+rust-version.workspace = true
 
 [dependencies]
 bip39 = { workspace = true }
