--- a/crates/non-membership-proofs/Cargo.toml
+++ b/crates/non-membership-proofs/Cargo.toml
@@ -3,6 +3,7 @@ name = "non-membership-proofs"
 version = "0.1.0"
 edition.workspace = true
 license = "MIT"
+rust-version.workspace = true
 
 [dependencies]
 async-stream = { workspace = true }
