--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ test-utils = { path = "crates/test-utils" }
 async-stream = "0.3.6"
 bip39 = "2.2.2"
 blake2s_simd = "1.0.3"
+bridgetree = "0.7.0"
 bytemuck = "1.24.0"
 clap = "4.5.53"
 clap_derive = "4.5.49"
@@ -32,11 +33,11 @@ futures = "0.3.31"
 futures-core = "0.3.31"
 hex = "0.4"
 http = "1.4.0"
+incrementalmerkletree = { version = "0.8.2" }
 itertools = "0.14.0"
 orchard = "0.11.0"
 prost = "0.14.1"
 rand = "0.9.2"
-rayon = "1.11.0"
 rpassword = "7.4.0"
 rs_merkle = "1.5.0"
 rustls = "0.23.35"
@@ -83,9 +84,7 @@ indexing_slicing = "deny"
 missing_asserts_for_indexing = "deny"
 print_stdout = "deny"
 unwrap_used = "deny"
-
-[workspace.lints.rustdoc]
-broken_intra_doc_links = "deny"
+too_many_lines = "deny"
 wildcard_enum_match_arm = "deny"
 
 complexity = { priority = -2, level = "deny" }
@@ -95,3 +94,6 @@ style = { priority = -6, level = "deny" }
 suspicious = { priority = -7, level = "deny" }
 pedantic = { priority = -8, level = "deny" }
 nursery = { priority = -9, level = "deny" }
+
+[workspace.lints.rustdoc]
+broken_intra_doc_links = "deny"
