--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,15 +1,19 @@
-# Full CI runs when PR is ready for review or before merging.
+# CI runs when a PR is opened/ready or before merging.
 #
-#  | Event                          | When                      |
-#  |--------------------------------|---------------------------|
-#  | pull_request (ready_for_review)| PR marked ready           |
-#  | merge_group                    | Merge queue (before merge)|
-#  | workflow_dispatch              | Manual trigger            |
+#  | Event                           | When                       |
+#  |---------------------------------|----------------------------|
+#  | pull_request (opened)           | PR created (draft or not)  |
+#  | pull_request (ready_for_review) | Draft PR marked ready      |
+#  | merge_group                     | Merge queue (before merge) |
+#  | workflow_dispatch               | Manual trigger             |
+#
+# Note: `synchronize` is intentionally omitted to avoid workflow runs on
+# every push.
 
 name: ci
 on:
   pull_request:
-    types: [opened, synchronize, ready_for_review, reopened]
+    types: [opened, ready_for_review]
     branches:
       - main
   merge_group:
@@ -20,18 +24,10 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 jobs:
-  ready:
-    # Skip CI for draft PRs
-    if: github.event.pull_request.draft == false || github.event_name != 'pull_request'
-    runs-on: ubuntu-latest
-    timeout-minutes: 1
-    steps:
-      - run: echo "PR is ready for review"
   fmt:
-    needs: ready
-    runs-on: ubuntu-latest
-    timeout-minutes: 1
     name: nightly / fmt
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
     steps:
       - name: Checkout
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # tag: v6.0.1
@@ -41,39 +37,26 @@ jobs:
         with:
           toolchain: nightly
           components: rustfmt
-      - run: rustup override set "${TOOLCHAIN}"
+      - name: Toolchain override
+        run: rustup override set "${TOOLCHAIN}"
         env:
           TOOLCHAIN: ${{steps.toolchain.outputs.name}}
       - name: cargo fmt --all --check
         run: cargo fmt --all --check
   lint:
-    needs: ready
+    name: nightly / clippy, test and docs
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    name: nightly / clippy, test and docs
-    permissions:
-      contents: read
     steps:
       - name: Checkout
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # tag: v6.0.1
         with:
           submodules: recursive
-      - name: Install protoc
-        uses: ./.github/actions/setup-protoc
-      - name: Setup patched dependencies
-        uses: ./.github/actions/setup-patched-deps
-      - name: Install nightly
-        uses: dtolnay/rust-toolchain@f7ccc83f9ed1e5b9c81d8a67d7ad1a747e22a561 # branch=master
-        id: toolchain
+      - name: Setup Rust build environment
+        uses: ./.github/actions/setup-rust-build
         with:
           toolchain: nightly
           components: clippy
-      - run: rustup override set "${TOOLCHAIN}"
-        env:
-          TOOLCHAIN: ${{steps.toolchain.outputs.name}}
-      - name: Setup Rust cache
-        uses: Swatinem/rust-cache@779680da715d629ac1d338a641029a2f4372abb5 # tag: v2.8.2
-        with:
           shared-key: lint-all-features
       - name: cargo clippy
         run: cargo clippy --locked --all-targets --all-features -- -D warnings
@@ -90,63 +73,38 @@ jobs:
         env:
           RUSTDOCFLAGS: -D warnings
   build:
-    needs: ready
+    name: stable / build
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    name: stable / build
     steps:
       - name: Checkout
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # tag: v6.0.1
         with:
           submodules: recursive
-      - name: Install protoc
-        uses: ./.github/actions/setup-protoc
-      - name: Setup patched dependencies
-        uses: ./.github/actions/setup-patched-deps
-      - name: Install stable
-        uses: dtolnay/rust-toolchain@f7ccc83f9ed1e5b9c81d8a67d7ad1a747e22a561 # branch=master
-        id: toolchain
+      - name: Setup Rust build environment
+        uses: ./.github/actions/setup-rust-build
         with:
           toolchain: stable
-      - run: rustup override set "${TOOLCHAIN}"
-        env:
-          TOOLCHAIN: ${{steps.toolchain.outputs.name}}
-      - name: Setup Rust cache
-        uses: Swatinem/rust-cache@779680da715d629ac1d338a641029a2f4372abb5 # tag: v2.8.2
-        with:
           shared-key: build-release
       - name: cargo build --release
         run: cargo build --release --locked
   msrv:
-    needs: ready
+    name: MSRV / 1.88.0
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    name: MSRV / 1.88.0
     steps:
       - name: Checkout
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # tag: v6.0.1
         with:
           submodules: recursive
-      - name: Install protoc
-        uses: ./.github/actions/setup-protoc
-      - name: Setup patched dependencies
-        uses: ./.github/actions/setup-patched-deps
-      - name: Install MSRV toolchain
-        uses: dtolnay/rust-toolchain@f7ccc83f9ed1e5b9c81d8a67d7ad1a747e22a561 # branch=master
-        id: toolchain
+      - name: Setup Rust build environment
+        uses: ./.github/actions/setup-rust-build
         with:
           toolchain: "1.88.0"
-      - run: rustup override set "${TOOLCHAIN}"
-        env:
-          TOOLCHAIN: ${{steps.toolchain.outputs.name}}
-      - name: Setup Rust cache
-        uses: Swatinem/rust-cache@779680da715d629ac1d338a641029a2f4372abb5 # tag: v2.8.2
-        with:
           shared-key: msrv
       - name: cargo check
         run: cargo check --locked --all-targets --all-features
   cargo-deny:
-    needs: ready
     name: Check licenses & security
     runs-on: ubuntu-latest
     timeout-minutes: 5
@@ -168,7 +126,6 @@ jobs:
       - name: cargo audit
         run: cargo audit
   machete:
-    needs: ready
     name: Check unused dependencies
     runs-on: ubuntu-latest
     timeout-minutes: 5
@@ -182,7 +139,6 @@ jobs:
       - name: cargo machete
         run: cargo machete
   toml-fmt:
-    needs: ready
     name: toml fmt
     runs-on: ubuntu-latest
     timeout-minutes: 5
@@ -196,7 +152,6 @@ jobs:
       - name: taplo fmt --check
         run: taplo fmt --check
   markdown-lint:
-    needs: ready
     name: markdown lint
     runs-on: ubuntu-latest
     timeout-minutes: 5
@@ -206,7 +161,6 @@ jobs:
       - name: Lint markdown
         uses: DavidAnson/markdownlint-cli2-action@07035fd053f7be764496c0f8d8f9f41f98305101 # tag: v22.0.0
   yaml-lint:
-    needs: ready
     name: yaml lint
     runs-on: ubuntu-latest
     timeout-minutes: 5
@@ -216,7 +170,6 @@ jobs:
       - name: Lint YAML
         uses: ibiqlik/action-yamllint@2576378a8e339169678f9939646ee3ee325e845c # tag: v3.1.1
   typos:
-    needs: ready
     name: typos
     runs-on: ubuntu-latest
     timeout-minutes: 5
