refactor!: reorganize non-membership-proofs module structure and add scanner architecture
  non-membership-proofs crate:
  - Rename `merkle` module to `non_membership_tree`
  - Move `source::light_walletd` to top-level `light_walletd` module
  - Add `scanner` module with block scanning and visitor pattern
  - `BlockScanner` for processing blocks
  - `AccountNotesVisitor` for collecting user notes
  - `ChainNullifiersVisitor` for collecting chain nullifiers
  - Add `viewing_keys` module for unified viewing key handling
  - Add `nullifier` module for nullifier types
  - Remove `source::file` module
  - Remove `user_nullifiers::decrypt_notes` (replaced by scanner)

  airdrop crate:
  - Split into lib + bin for testability
  - Add integration test for `build-airdrop-configuration`
  - Update imports to use new module paths
  - Remove `chain_nullifiers` module (moved to non-membership-proofs)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
         with:
           tool: cargo-hack
       - name: cargo hack
-        run: cargo hack --no-dev-deps --feature-powerset check --locked
+        run: cargo hack --feature-powerset check --locked
       - name: cargo test
         run: cargo test --locked --all-features
       - name: Check Documentation
