--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
   "crates/mnemonic-to-fvks",
   "crates/non-membership-proofs",
   "crates/airdrop",
+  "crates/test-utils",
 ]
 
 [workspace.package]
@@ -15,25 +16,33 @@ license = "MIT"
 [workspace.dependencies]
 mnemonic-to-fvks = { path = "crates/mnemonic-to-fvks" }
 non-membership-proofs = { path = "crates/non-membership-proofs" }
+test-utils = { path = "crates/test-utils" }
 
-async-stream = "0.3.6"
+assert_cmd = "2.1.2"
 bip39 = "2.2.2"
+blake2s_simd = "1.0.3"
+bls12_381 = "0.8"
+bridgetree = "0.7.0"
 bytemuck = "1.24.0"
 clap = "4.5.53"
 clap_derive = "4.5.49"
 config = { version = "0.15.19", default-features = false }
 console-subscriber = "0.5.0"
+dirs = "6.0.0"
 dotenvy = "0.15.7"
 eyre = "0.6.12"
+ff = "0.13"
 futures = "0.3.31"
-futures-core = "0.3.31"
+group = "0.13"
+ureq = "3.1.4"
 hex = "0.4"
 http = "1.4.0"
+incrementalmerkletree = { version = "0.8.2" }
 itertools = "0.14.0"
 orchard = "0.11.0"
 prost = "0.14.1"
+rand = "0.9.2"
 rpassword = "7.4.0"
-rs_merkle = "1.5.0"
 rustls = "0.23.35"
 sapling = { package = "sapling-crypto", version = "0.5" }
 schemars = "1.1.0"
@@ -42,9 +51,12 @@ serde = "1"
 serde_json = "1"
 serde_with = "3.16.1"
 sha2 = "0.10"
+shardtree = "0.6.1"
 sled = "0.34.7"
+tempfile = "3.24.0"
 thiserror = "2.0.17"
 tokio = "1.48.0"
+tokio-util = { version = "0.7.17" }
 tonic = "0.14.2"
 tonic-prost = "0.14.2"
 tonic-prost-build = "0.14.2"
@@ -52,7 +64,6 @@ tracing = "0.1.43"
 tracing-subscriber = "0.3.22"
 zcash_client_backend = "0.21.0"
 zcash_keys = "0.12.0"
-zcash_note_encryption = "0.4.1"
 zcash_primitives = "0.26.3"
 zcash_protocol = "0.7.2"
 zip32 = "0.2.1"
@@ -70,8 +81,22 @@ unused_qualifications = "warn"
 
 [workspace.lints.clippy]
 arithmetic_side_effects = "deny"
+as_conversions = "deny"
+float_arithmetic = "deny"
 indexing_slicing = "deny"
+missing_asserts_for_indexing = "deny"
+print_stdout = "deny"
 unwrap_used = "deny"
+too_many_lines = "deny"
+wildcard_enum_match_arm = "deny"
+
+complexity = { priority = -2, level = "deny" }
+perf = { priority = -3, level = "deny" }
+correctness = { priority = -4, level = "deny" }
+style = { priority = -6, level = "deny" }
+suspicious = { priority = -7, level = "deny" }
+pedantic = { priority = -8, level = "deny" }
+nursery = { priority = -9, level = "deny" }
 
 [workspace.lints.rustdoc]
 broken_intra_doc_links = "deny"
