--- a/crates/non-membership-proofs/Cargo.toml
+++ b/crates/non-membership-proofs/Cargo.toml
@@ -6,16 +6,21 @@ license.workspace = true
 rust-version.workspace = true
 
 [dependencies]
-async-stream = { workspace = true }
+blake2s_simd = { workspace = true }
+bridgetree = { workspace = true }
 bytemuck = { workspace = true }
-futures = { workspace = true }
-futures-core = { workspace = true }
-hex = { workspace = true }
+ff = { workspace = true }
+futures = { workspace = true, features = ["compat"] }
+group = "0.13"
+hex = "0.4"
 http = { workspace = true }
+incrementalmerkletree = { workspace = true }
 orchard = { workspace = true }
-rayon = "1"
-rs_merkle = { workspace = true }
 sapling = { workspace = true }
+schemars = { workspace = true, features = ["derive"] }
+serde = { workspace = true, features = ["derive"] }
+serde_with = { workspace = true, features = ["hex"] }
+shardtree = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = [
   "rt-multi-thread",
@@ -27,11 +32,19 @@ tonic = { workspace = true, features = ["tls-native-roots"] }
 tracing = { workspace = true }
 zcash_client_backend = { workspace = true, features = [
   "lightwalletd-tonic-tls-webpki-roots",
+  "orchard",
 ] }
-zcash_note_encryption = { workspace = true }
+zcash_keys = { workspace = true }
 zcash_primitives = { workspace = true }
 zcash_protocol = { workspace = true }
-zip32 = "0.2"
+zip32 = { workspace = true }
+
+[dev-dependencies]
+rand = { workspace = true }
+serde_json = { workspace = true }
+tempfile = { workspace = true }
+test-utils = { workspace = true }
+tokio-util = { workspace = true, features = ["compat"] }
 
 [lints]
 workspace = true
