--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,6 +72,7 @@ zcash_keys = "0.12.0"
 zcash_primitives = "0.26.3"
 zcash_protocol = "0.7.2"
 zcash_proofs = "0.26.1"
+zeroize = "1.8"
 zip32 = "0.2.1"
 
 [patch.crates-io]
