--- a/crates/airdrop/Cargo.toml
+++ b/crates/airdrop/Cargo.toml
@@ -33,6 +33,7 @@ orchard = { workspace = true }
 rustls = { workspace = true, features = ["ring"] }
 sapling = { workspace = true }
 schemars = { workspace = true, features = ["derive"] }
+secrecy = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 serde_with = { workspace = true, features = ["hex"] }
@@ -47,6 +48,7 @@ tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
 zcash_keys = { workspace = true, features = ["orchard", "sapling"] }
 zcash_protocol = { workspace = true }
+zeroize = { workspace = true }
 zip32 = { workspace = true }
 
 [dev-dependencies]
