--- a/crates/zair-nonmembership/Cargo.toml
+++ b/crates/zair-nonmembership/Cargo.toml
@@ -14,6 +14,7 @@ thiserror = { workspace = true }
 zair-core = { workspace = true }
 
 [dev-dependencies]
+hex-literal = { workspace = true }
 test-utils = { workspace = true }
 
 [lints]
