chore(nix): remove dependency patching

--- a/typos.toml
+++ b/typos.toml
@@ -1,5 +1,5 @@
 [files]
-extend-exclude = ["nix/*.patch"]
+extend-exclude = ["vendor/**/*"]
 
 [default]
 # Ignore words matching long alphanumeric patterns (hashes, addresses)
